{{$NEXT}}

Drivers:
* FO::Setur
* PT::Freeling
* UG::Udt

Features:
* New value 'aug' of feature 'degree': augmentative, opposite of diminutive.
  Used for nouns in the Freeling tagset for Portuguese.



2.052     2016-06-22 14:37:30+02:00 Europe/Prague

Drivers:
* HSB::Sorokin

Fixes:
* MUL::Google: now includes the tags AUX and PNOUN that were used in Universal
  Dependency Treebanks v2.0.
* CA::Conll2009 (and derived ES::Conll2009) now convert numeral pronouns and
  determiners to definite numerals, i.e. the 'prontype' feature is empty.



2.051     2016-02-12 22:00:32+01:00 Europe/Prague

Drivers:
* RO::Multext

Features:
* New value 'emp' of feature 'prontype': emphatic pronoun. There are
  similarities with reflexive and demonstrative pronouns/determiners.
  Example: "himself" as in "He himself did it." Czech "sám", Romanian "însuși".

Interface:
* Shifted semantics of pronoun-related is_*() methods of the FeatureStructure
  class, added two new methods:
  is_pronominal() is true if prontype is not empty. It includes pronouns,
      determiners, quantifiers and pronominal adverbs. This is what the
      is_pronoun() method did previously.
  is_pronoun() is true if is_pronominal() && is_noun()
  is_noun() therefore includes nouns and pronouns (does not check prontype)
  is_determiner() is true if is_pronominal() && is_adjective()
  is_adjective() therefore includes adjectives and determiners
  is_article() is true if prontype values contain 'art'; it is assumed that the
      pos is then 'adj' but it is not tested.

Fixes:
* EU::Conll: still used the deprecated feature 'subpos'.
* FeatureStructure->set_upos() should not reset non-empty prontype to 'prn'.



2.050     2015-09-30 21:09:39+02:00 Europe/Prague

Interface:
* The set() method of FeatureStructure now accepts feature values that had to
  be renamed in the past: degree=comp and number=plu. When someone tries to set
  these values, they will be translated to the new values before storing. Thus